made a few adjustments and added the assembly page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,3 +12,4 @@ pages:
   - 'Project Brief': 'project-brief.md'
   - 'Roadmap': 'roadmap.md'
   - 'Feedstock': 'feedstock.md'
+  - 'Assembly': 'assembly.md'
