assembly docs for gen3.1 + restructuring

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,4 +12,6 @@ nav:
   - 'Project Brief': 'project-brief.md'
   - 'Roadmap': 'roadmap.md'
   - 'Feedstock': 'feedstock.md'
-  - 'Assembly': 'assembly.md'
+  - 'Assembly' :
+    - 'Print Head gen 3.1': 'assembly/print-head-gen3.1.md'
+    - 'Print Head legacy': 'assembly/print-head-legacy.md'
