added warning to assembly pages and made proper build

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,8 @@ site_url: https://openpyrojet.com
 theme: readthedocs
 extra_css:
   - css/extra.css
+markdown_extensions:
+  - admonition
 docs_dir: source
 site_dir: docs
 nav:
